# openai-dummy-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: publish.yml
src/: __init__.py  config.py  main.py  models.py  state.py  tokenizer.py
src/api/: __init__.py  completions.py  dashboard.py  health.py  models.py  status.py
src/web/: __init__.py  templates.py
src/web/static/css/: dashboard.css
src/web/static/js/: dashboard.js
